--- a/android/base/build.gradle
+++ b/android/base/build.gradle
@@ -1,6 +1,7 @@
 plugins {
   id 'com.android.library'
   id 'kotlin-android'
+  id 'kotlin-android-extensions'
 }
 
 android {
@@ -60,4 +61,5 @@ android {
 
 dependencies {
   implementation fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
+  api project(':library')
 }
