--- a/android/build.gradle
+++ b/android/build.gradle
@@ -59,9 +59,10 @@ ext {
 
   kotlin = "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
   ktx = "androidx.core:core-ktx:1.2.0"
-  appcompat = "androidx.appcompat:appcompat:1.1.0"
-  material = "com.google.android.material:material:1.1.0"
-  constraintLayout = "androidx.constraintlayout:constraintlayout:1.1.3"
+  appcompat = "androidx.appcompat:appcompat:+"
+  material = "com.google.android.material:material:+"
+  constraintLayout = "androidx.constraintlayout:constraintlayout:+"
+
   // react native
   rct = "com.facebook.react:react-native:+"
   jsc = "org.webkit:android-jsc:+"
