--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
   id 'com.android.application'
   id 'kotlin-android'
   id 'kotlin-android-extensions'
+  id 'kotlin-kapt'
 }
 
 android {
@@ -75,4 +76,6 @@ android {
 dependencies {
   implementation fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
   implementation project(':base')
+
+  kapt rootProject.ext.aptDagger
 }
