--- a/android/base/build.gradle
+++ b/android/base/build.gradle
@@ -2,6 +2,7 @@ plugins {
   id 'com.android.library'
   id 'kotlin-android'
   id 'kotlin-android-extensions'
+  id 'kotlin-kapt'
 }
 
 android {
@@ -62,4 +63,6 @@ android {
 dependencies {
   implementation fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
   api project(':library')
+
+  kapt rootProject.ext.aptDagger
 }
