--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -14,7 +14,10 @@
     android:roundIcon="@mipmap/ic_launcher_round"
     android:supportsRtl="true"
     android:theme="@style/Theme.Wanwan">
-    <activity android:name="com.xjw.wanwan.MainActivity">
+    <activity
+      android:name="com.xjw.wanwan.SplashActivity"
+      android:launchMode="singleTop"
+      android:screenOrientation="portrait">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
 
@@ -23,9 +26,13 @@
     </activity>
 
     <activity
+      android:name=".MainActivity"
+      android:launchMode="singleInstance"
+      android:screenOrientation="portrait" />
+    <activity
       android:name=".diTest.view.TestDiActivity"
       android:launchMode="singleTop"
-      android:screenOrientation="portrait"/>
+      android:screenOrientation="portrait" />
     <activity
       android:name="com.xjw.wanwan.rct.MainRCTActivity"
       android:launchMode="singleTop"
