--- a/android/build.gradle
+++ b/android/build.gradle
@@ -70,4 +70,7 @@ ext {
   //dagger2
   dagger2 = "com.google.dagger:dagger:$dagger_version"
   aptDagger = "com.google.dagger:dagger-compiler:$dagger_version"
+  //ARouter
+  arouter = "com.alibaba:arouter-api:1.5.0"
+  aptRouter = "com.alibaba:arouter-compiler:1.2.2"
 }
