--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -45,7 +45,7 @@ android {
     multiDexEnabled true
     ndk {
       //设置支持的SO库架构
-      abiFilters 'arm64-v8a' // 'armeabi-v7a', 'armeabi' , 'x86', 'x86_64', 'arm64-v8a'
+      abiFilters 'arm64-v8a', 'armeabi-v7a' // 'armeabi' , 'x86', 'x86_64', 'arm64-v8a'
     }
   }
 
