--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -16,9 +16,9 @@
     android:theme="@style/AppTheme">
     <activity
       android:name="com.xjw.wanwan.SplashActivity"
-      android:theme="@style/FullScreen"
       android:launchMode="singleTop"
-      android:screenOrientation="portrait">
+      android:screenOrientation="portrait"
+      android:theme="@style/FullScreen">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
 
@@ -29,6 +29,10 @@
     <activity
       android:name=".MainActivity"
       android:launchMode="singleInstance"
+      android:screenOrientation="portrait" />
+    <activity
+      android:name=".rx.RxActivity"
+      android:launchMode="singleTop"
       android:screenOrientation="portrait" />
     <activity
       android:name=".diTest.view.TestDiActivity"
